# scribe

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Clippy.toml  LICENSE  README.md  SECURITY.md  clear_staging_users.sql  docker-compose.yml  infinite-scroll-plan.md  package.json  pnpm-lock.yaml  postgres-custom.conf  start.sh
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  TOOL_AUDIT.md  TOOL_REGISTRY_MIGRATION_PLAN.md  build.rs  diesel.toml
backend/docs/: DISTRIBUTED_PLANNING_ARCHITECTURE_ROADMAP.md  ECS_ENHANCEMENTS_PROPOSAL.md  ENRICHED_CONTEXT_SCHEMA.md
backend/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
backend/migrations/2025-04-18-103148_create_sessions_table/: up.sql
backend/migrations/2025-04-21-111127_add_missing_character_fields/: down.sql  up.sql
backend/migrations/2025-04-23-233746_add_chat_session_settings/: down.sql  up.sql
backend/migrations/2025-04-25-095032_add_user_id_to_chat_messages/: down.sql  up.sql
backend/migrations/2025-04-30-024952_add_history_management_to_chat_sessions/: down.sql  up.sql
backend/migrations/2025-05-03-145838_add_email_to_users/: down.sql  up.sql
backend/migrations/2025-05-04-095859_add_model_name_to_chat_sessions/: down.sql  up.sql
backend/migrations/2025-05-07-023752_add_gemini_options/: down.sql  up.sql
backend/migrations/2025-05-09-004621_add_encryption_fields_to_users/: down.sql  up.sql
backend/migrations/2025-05-09-015708_update_sensitive_fields_to_bytea/: down.sql  up.sql
backend/migrations/2025-05-09-100210_add_nonce_fields_for_encryption/: down.sql  up.sql
backend/migrations/2025-05-10-100000_add_frontend_tables/: down.sql  up.sql
backend/migrations/2025-05-10-100001_rename_tables/: down.sql  up.sql
backend/migrations/2025-05-10-100002_add_columns_to_chat_tables/: down.sql  up.sql
backend/migrations/2025-05-10-130917_add_nonce_fields_to_users/: down.sql  up.sql
backend/migrations/2025-05-14-234601_add_user_roles/: down.sql  up.sql
backend/migrations/2025-05-15-020047_add_account_status_to_users/: down.sql  up.sql
backend/migrations/2025-05-15-094128_add_token_counts_to_chat_messages/: down.sql  up.sql
backend/migrations/2025-05-19-023621_create_chat_character_overrides/: down.sql  up.sql
backend/migrations/2025-05-20-132227_add_unique_constraint_to_chat_character_overrides/: down.sql  up.sql
backend/migrations/2025-05-21-073445_create_user_personas_table/: down.sql  up.sql
backend/migrations/2025-05-21-073459_modify_chat_sessions_table_for_personas/: down.sql  up.sql
backend/migrations/2025-05-22-030543_add_default_persona_id_to_users/: down.sql  up.sql
backend/migrations/2025-05-22-134803_alter_lorebooks_table/: down.sql  up.sql
backend/migrations/2025-05-22-134814_alter_lorebook_entries_table/: down.sql  up.sql
backend/migrations/2025-05-22-134824_create_chat_session_lorebooks_table/: down.sql  up.sql
backend/migrations/2025-05-25-074649_add_timestamps_to_chat_session_lorebooks/: down.sql  up.sql
backend/migrations/2025-05-25-124404_encrypt_chat_sessions_user_data/: down.sql  up.sql
backend/migrations/2025-05-30-142900_update_chat_settings_columns/: down.sql  up.sql
backend/migrations/2025-06-03-091600_create_character_lorebooks_table/: down.sql  up.sql
backend/migrations/2025-06-04-030028_add_raw_prompt_fields_to_chat_messages/: down.sql  up.sql
backend/migrations/2025-06-04-084735_fix_alternate_greetings_nullable/: down.sql  up.sql
backend/migrations/2025-06-05-123407_create_chat_character_lorebook_overrides/: down.sql  up.sql
backend/migrations/2025-06-06-053628_create_user_settings_table/: down.sql  up.sql
backend/migrations/2025-06-06-142918_add_avatar_data_to_character_assets/: down.sql  up.sql
backend/migrations/2025-06-08-121354_add_sillytavern_v3_fields/: down.sql  up.sql
backend/migrations/2025-06-10-093153_create_email_verification_tokens/: down.sql  up.sql
backend/migrations/2025-06-15-151918_create_message_variants_table/: down.sql  up.sql
backend/migrations/2025-06-17-084930_add_chat_mode_to_sessions/: down.sql  up.sql
backend/migrations/2025-06-21-115453_create_chronicle_tables/: down.sql  up.sql
backend/migrations/2025-06-25-113023_encrypt_chronicle_events/: down.sql  (+1 more)
backend/scripts/: test-llm-security.sh
backend/src/: config.rs  crypto.rs  errors.rs  lib.rs  logging.rs  logging_tests.rs  main.rs  prompt_builder.rs  schema.rs  state.rs  state_builder.rs  test_fixtures.rs  test_helpers.rs
backend/tests/: SECURITY_TESTS_SUMMARY.md  advanced_query_patterns_tests.rs  agent_context_analysis_error_handling_test.rs  agent_context_analysis_unit_tests.rs  agent_prompt_templates_security_tests.rs  agent_prompt_templates_tests.rs  agent_runner_security_tests.rs  agent_runner_unit_tests.rs  agent_tool_access_test.rs  agent_tool_registry_test.rs  agentic_auto_chronicle_tests.rs  agentic_chat_integration_tests.rs  agentic_e2e_test.rs  agentic_event_deduplication_tests.rs  agentic_flow_verification_tests.rs  agentic_lorebook_creation_tests.rs  agentic_narrative_integration_tests.rs  agentic_orchestrator_e2e_integration_tests.rs  agentic_orchestrator_tests.rs  agentic_persona_integration_tests.rs  agentic_realtime_extraction_tests.rs  agentic_security_tests.rs  agentic_tools_test.rs  agentic_workflow_integration_tests.rs  ai_powered_tools_integration_tests.rs  auth_dek_security_test.rs  auth_tests.rs  avatar_api_tests.rs  causal_component_tests.rs  character_alternate_greetings_test.rs  character_card_tests.rs  character_create_tests.rs  character_delete_tests.rs  character_generate_tests.rs  character_generation_integration_tests.rs  character_generation_lorebook_integration_tests.rs  character_generation_security_tests.rs  character_image_tests.rs  character_list_get_tests.rs  character_security_tests.rs  (+235 more)
cli/: Cargo.toml
cli/src/: chat.rs  client.rs  client_admin.rs  error.rs  handlers.rs  io.rs  lib.rs  main.rs  test_helpers.rs
cli/tests/: account_locking_test.rs  character_creation_tests.rs  character_editing_tests.rs  chat_override_tests.rs  user_persona_cli_tests.rs
(+765 files in other folders)
