[package]
name = "scribe-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "^0.8.3", features = ["macros", "multipart"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
png = "0.17.13"
base64 = "0.22.1"
thiserror = "1.0.61"
diesel = { version = "2.2.9", features = ["postgres", "chrono", "r2d2", "uuid", "serde_json", "numeric", "64-column-tables"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tower-sessions = "0.14.0"
axum-login = "0.17.0"
bcrypt = "0.15.1"
secrecy = { version = "0.8.0", features = ["serde"] }
zip = "2.6.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

anyhow = "1.0.86"
futures-util = "0.3.30"
bigdecimal = { version = "0.4.3", features = ["serde"] }

deadpool = "0.12.2"
deadpool-diesel = { version = "0.6.1", features = ["postgres", "rt_tokio_1", "serde"] }

async-trait = "0.1.80"
time = { version = "0.3.36", features = ["serde", "serde-well-known"] }

rand = "0.8.5"
cookie = { version = "0.18.1", features = ["secure"] }
tower-cookies = "0.11.0"

lettre = { version = "0.11.7" }
mime = "0.3.17"
password-auth = { version = "1.0.0", features = ["argon2"] }
hex = "0.4.3"

genai = "0.2.2"

reqwest = { version = "0.12.15", features = ["json", "multipart", "stream"] }
reqwest-middleware = { version = "0.4.2" }
reqwest-retry = { version = "0.7.0"}

qdrant-client = "1.13.0"

diesel_json = "0.2.1"
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg"] }

envy = "0.4"

[dev-dependencies]
hyper-util = { version = "0.1.6", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "cookies"] }
serde_json = "1.0.120"
crc32fast = "1.4.2"
mime = "0.3.17"
http-body-util = "0.1.2"
cargo-tarpaulin = "0.30.0"
anyhow = "1.0.86"
once_cell = "1.19.0"
bytes = "1.6.0"
jsonwebtoken = "9.3.0"
tempfile = "3.10.1"
testcontainers = "0.23.0"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
bcrypt = "0.15.1"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
http = "1.1.0"
test-context = "0.1.4"
lazy_static = "1.5.0"

rstest = "0.25.0"