[package]
name = "scribe-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "^0.8.3", features = ["macros", "multipart"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
png = "0.17.16"
base64 = "0.22.1"
thiserror = "2.0.12"
diesel = { version = "2.2.9", features = ["postgres", "chrono", "r2d2", "uuid", "serde_json", "numeric", "64-column-tables"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.40", features = ["serde"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tower-sessions = "0.14.0"
axum-login = "0.17.0"
bcrypt = "0.17.0"
secrecy = { version = "0.8", features = ["serde"] }
zip = "2.6.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

anyhow = "1.0.98"
futures-util = "0.3.31"
bigdecimal = { version = "0.4.8", features = ["serde"] }

deadpool = "0.12.2"
deadpool-diesel = { version = "0.6.1", features = ["postgres", "rt_tokio_1", "serde"] }

async-trait = "0.1.88"
time = { version = "0.3.41", features = ["serde", "serde-well-known"] }

rand = "0.9.1"
cookie = { version = "0.18.1", features = ["secure"] }
tower-cookies = "0.11.0"

lettre = { version = "0.11.15" }
mime = "0.3.17"
password-auth = { version = "1.0.0", features = ["argon2"] }
hex = "0.4.3"

genai = "0.2.2"

reqwest = { version = "0.12.15", features = ["json", "cookies", "rustls-tls", "multipart"], default-features = false }
reqwest-middleware = { version = "0.4.2" }
reqwest-retry = { version = "0.7.0"}

qdrant-client = { version = "1.14.0", features = ["serde"] }

diesel_json = "0.2.1"
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }

envy = "0.4"

# Url (for parsing base URLs, etc.)
url = "2.5.4"

# Added for streaming
futures = "0.3.31"
async-stream = "0.3.6"

# Added for sentence splitting (using ICU4X)
icu_segmenter = { version = "1.5", features = ["compiled_data"] }
icu_provider = "1.5"
icu_provider_blob = "1.5"
icu_testdata = "1.5"

# Add missing dependencies here
# icu = { version = "1.5", features = ["macros"] }
icu_locid = "1.5"

[dev-dependencies]
hyper-util = { version = "0.1.11", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "cookies"] }
serde_json = "1.0.140"
crc32fast = "1.4.2"
mime = "0.3.17"
http-body-util = "0.1.3"
cargo-tarpaulin = "0.32.3"
anyhow = "1.0.98"
once_cell = "1.21.3"
bytes = "1.10.1"
jsonwebtoken = "9.3.1"
tempfile = "3.19.1"
testcontainers = "0.23.3"
testcontainers-modules = { version = "0.11.6", features = ["postgres"] }
bcrypt = "0.17.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
http = "1.3.1"
test-context = "0.4.1"
lazy_static = "1.5.0"
async-trait = "0.1.88"
rstest = "0.25.0"

# Add qdrant-client for integration tests
qdrant-client = { version = "1.14.0", features = ["serde"] }

# Add serial_test for controlling test execution order and setup
serial_test = "3.0.0" # Check crates.io for latest version if needed

# Testing utilities
httpc-test = "0.1.10" # For testing axum handlers
mockito = "1.7.0"
httpmock = "0.7.0" # For mocking HTTP requests

# Specify the library target explicitly
[lib]
name = "scribe_backend"
path = "src/lib.rs"
