[package]
name = "scribe-backend"
version = "0.1.0"
edition = "2024"

[features]
default = []
local-llm = ["dep:sysinfo", "dep:nix", "dep:which", "dep:tempfile"]
production = []  # Explicitly excludes local-llm code

[[bin]]
name = "re_embed_chronicles"
path = "src/bin/re_embed_chronicles.rs"

[build-dependencies]
# Build dependencies are only needed for local-llm feature

[dependencies]
axum = { version = "0.7.5", features = ["macros", "multipart", "tokio"] } # Align with tonic and axum-login ^0.7.0, ADDED tokio feature
axum-macros = "0.4.1" # Added for debug_handler
axum-server = { version = "0.7.0", features = ["tls-rustls"] } # Added for HTTPS serving
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
png = "0.17.16"
base64 = "0.22.1"
thiserror = "2.0.12"
diesel = { version = "2.2.9", features = ["postgres", "chrono", "r2d2", "uuid", "serde_json", "numeric", "64-column-tables", "128-column-tables"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.40", features = ["serde"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tower-sessions = { version = "0.11.1", features = ["signed"] }
axum-login = "0.14.0" # Compatible with axum 0.7.x
bcrypt = "0.17.0"
argon2 = { version = "0.5.3", features = ["std"] } # Ensure std feature for hash_raw if available, or check API
secrecy = { version = "0.10.3", features = ["serde"] } # alloc feature removed as it's not standard
aes-gcm = "0.10.3" # For AES-GCM encryption
ring = "0.17.8" # Add ring
zip = "4.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

anyhow = "1.0.98"
futures-util = "0.3.31"
bigdecimal = { version = "0.4.8", features = ["serde"] }
crc32fast = "1.4.2"

deadpool = "0.12.2"
deadpool-diesel = { version = "0.6.1", features = ["postgres", "rt_tokio_1", "serde"] }

async-trait = "0.1.88"
time = { version = "0.3.41", features = ["serde", "serde-well-known"] }

rand = "0.9.1"
cookie = { version = "0.18.1", features = ["secure"] }
tower-cookies = { version = "0.10.0", features = ["signed"] } # Aligned with axum-login 0.14.0, added "signed" feature

lettre = { version = "0.11.15" }
mime = "0.3.17"
password-auth = { version = "1.0.0", features = ["argon2"] }
hex = "0.4.3"

genai = { git = "https://github.com/sanguinehost/rust-genai", rev = "4685b80" }

reqwest = { version = "0.12.15", features = ["json", "cookies", "rustls-tls", "multipart"], default-features = false }
reqwest-middleware = { version = "0.4.2" }
reqwest-retry = { version = "0.7.0"}

qdrant-client = { version = "1.14.0", features = ["serde"] }

diesel_json = "0.2.1"
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg"] }

envy = "0.4"

# Url (for parsing base URLs, etc.)
url = "2.5.4"

# Added for streaming
futures = "0.3.31"
async-stream = "0.3.6"

# Added for sentence splitting (using ICU4X)
icu_segmenter = { version = "1.5", features = ["compiled_data"] }
icu_provider = "1.5"
icu_provider_blob = "1.5"
icu_testdata = "1.5"

# Add missing dependencies here
# icu = { version = "1.5", features = ["macros"] }
icu_locid = "1.5"

validator = { version = "0.20", features = ["derive"] }
regex = "1.10.4"
# Add missing dependencies needed by test_helpers
tonic = "0.12.3"
testcontainers = "0.23.3"
http-body-util = { version = "0.1.3", features = ["full"] }

rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pki-types = "1.9.0" # <-- Keep this dependency

utf8_iter = "1.0.0" # Corrected crate name (underscore vs hyphen)

# Add for new TLS setup
rustls-pemfile = "2.1.2"
tokio-rustls = "0.26.0"
rcgen = "0.13.1"  # For generating self-signed certificates

# Local LLM dependencies (only with feature flag)
sysinfo = { version = "0.30", optional = true }  # For hardware detection
nix = { version = "0.29", features = ["signal"], optional = true }  # For Unix process management
which = { version = "7.0", optional = true }  # For finding executables in PATH
tempfile = { version = "3.19.1", optional = true }  # For temporary files in model management
clap = { version = "4.5.26", features = ["derive"] }

tokio-stream = "0.1"

# Tokenization
sentencepiece = "0.11.3"

# AWS SDK for SES email service
aws-config = "1.6.3"
aws-sdk-ses = "1.75.0"

# Rate limiting
tower_governor = "0.5.0"

[dev-dependencies]
axum = { version = "0.7.5", features = ["macros", "multipart", "tokio"] } # Mirror main deps features for tests, ADDED tokio feature
axum-server = { version = "0.7.0", features = ["tls-rustls"] } # Mirror main deps features
hyper-util = { version = "0.1.11", features = ["full"] }
reqwest = { version = "0.12.15", features = ["json", "cookies"] }
serde_json = "1.0.140"
crc32fast = "1.4.2"
mime = "0.3.17"
cargo-tarpaulin = "0.32.3"
anyhow = "1.0.98"
once_cell = "1.21.3"
bytes = "1.10.1"
jsonwebtoken = "9.3.1"
tempfile = "3.19.1"
bcrypt = "0.17.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
http = "1.3.1"
test-context = "0.4.1"
lazy_static = "1.5.0"
async-trait = "0.1.88"
rstest = "0.25.0"
serial_test = "3.0.0"
log = "0.4" # Add log crate for testing
ctor = "0.2.1" # For running code at test startup
dotenvy = "0.15"

# Testing utilities
httpc-test = "0.1.10" # For testing axum handlers
mockito = "1.7.0"
httpmock = "0.7.0" # For mocking HTTP requests
mockall = "0.13.0" # Add mockall
secrecy = { version = "0.10.3", features = ["serde"] } # Fix E0432: Add secrecy to dev-deps for tests

# Specify the library target explicitly
[lib]
name = "scribe_backend"
path = "src/lib.rs"


# Optional: If you have separate integration tests
# [[test]]
# name = "integration_tests" # Example name
# path = "tests/integration.rs" # Example path
# harness = true

