[package]
name = "scribe-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependency
scribe-backend = { path = "../backend" }

# CLI dependencies
clap = { version = "4.5.4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] } # Using version 1 for compatibility, adjust as needed
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "cookies", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.16.0", features = ["v4"] } # v4 only might be sufficient
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] } # fmt feature needed for subscriber init
url = "2.5"
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
# Add dev dependencies if needed for CLI-specific tests
tempfile = "3.19.1"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "scribe-cli"
path = "src/main.rs" 