[package]
name = "scribe-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# Workspace dependency
scribe-backend = { path = "../backend" }

# CLI dependencies
clap = { version = "4.5.37", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] } # Using version 1 for compatibility, adjust as needed
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json", "cookies", "multipart", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.16.0", features = ["v4"] } # v4 only might be sufficient
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] } # fmt feature needed for subscriber init
url = "2.5"
thiserror = "2.0"
async-trait = "0.1"
reqwest-eventsource = "0.6.0"
futures-util = { version = "0.3", features = ["sink"] } # For StreamExt
chrono = { version = "0.4.40" }
secrecy = "0.8" # Add the secrecy crate for Secret<String>

async-stream = "0.3" # For creating streams
tokio-stream = "0.1" # Removed incorrect features

# Added missing dependencies for handlers
genai = { path = "/home/socol/Workspace/rust-genai" }
qdrant-client = "1.10.0"

# Moved from dev-dependencies
httptest = "0.16.3" # For mocking HTTP requests in tests
tempfile = "3.19.1" # For handling temporary files
bigdecimal = { version = "0.4", features = ["serde"] } # For ChatSession testing

[dev-dependencies]
# Add dev dependencies if needed for CLI-specific tests
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "scribe-cli"
path = "src/main.rs" 
